--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </g>
             </svg>
           </a>
-          <a class="tgme_head_right_btn" href="https://telegram.org/dl?tme=ca9a9f924856fcb02c_16713801587155709269">
+          <a class="tgme_head_right_btn" href="https://t.me/topescortdub">
             Download
           </a>
         </div>
@@ -72,7 +72,7 @@
       <div class="tgme_body_wrap">
         <div class="tgme_page">
           <div class="tgme_page_photo">
-  <a href="tg://resolve?domain=topescortdub&post=1"><img class="tgme_page_photo_image" src="https://cdn4.cdn-telegram.org/file/Pak_VjfYt-R_Zi7pgD8i021_YZ525w1tVlWQffofDoRJ47Nl8G7tYRoR0xc4u0sCM6MNOTW2p2z7sOHbHWW8zC0ZJvcxNysK5mKFVJXDgUn6ordjlW-R0yNOf8d9Nkr2lBKXb6OkC2umEC3XhiMspCrD1zms3FjZtRhr-W_AsrWFWr4Nzqx5KtYyVkYwNNU1TyGzK7CFXearw8dAwLAWBm4r6FktmymEsq1AEhQ1o7UZi_yVf53nFpSS6wyxURFIBc05jFfXzLCMpsb-pGgzPY3O7Mxq-RMOU1zJFQu8rFcbRkQZfHuTUiqKvI4mQWN9_Retk1MKr_cQian6q9UY4g.jpg"></a>
+  <a href="https://t.me/topescortdub"><img class="tgme_page_photo_image" src="https://cdn4.cdn-telegram.org/file/Pak_VjfYt-R_Zi7pgD8i021_YZ525w1tVlWQffofDoRJ47Nl8G7tYRoR0xc4u0sCM6MNOTW2p2z7sOHbHWW8zC0ZJvcxNysK5mKFVJXDgUn6ordjlW-R0yNOf8d9Nkr2lBKXb6OkC2umEC3XhiMspCrD1zms3FjZtRhr-W_AsrWFWr4Nzqx5KtYyVkYwNNU1TyGzK7CFXearw8dAwLAWBm4r6FktmymEsq1AEhQ1o7UZi_yVf53nFpSS6wyxURFIBc05jFfXzLCMpsb-pGgzPY3O7Mxq-RMOU1zJFQu8rFcbRkQZfHuTUiqKvI4mQWN9_Retk1MKr_cQian6q9UY4g.jpg"></a>
 </div>
 <div class="tgme_page_title" dir="auto">
   <span dir="auto">TOP ESCORT AGENCY</span>
@@ -80,7 +80,7 @@
 <div class="tgme_page_extra">42 subscribers</div>
 <div class="tgme_page_description" dir="auto">The best escort service in Dubai and Thailand</div>
 <div class="tgme_page_action">
-  <a class="tgme_action_button_new shine" href="tg://resolve?domain=topescortdub&post=1">View Post</a>
+  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Post</a>
 </div>
 <!-- WEBOGRAM_BTN -->
 <div class="tgme_page_context_link_wrap"><a class="tgme_page_context_link" href="../s/topescortdub/1.html">View context</a></div>
