--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 <div class="tgme_page_title" dir="auto">
   <span dir="auto">TOP ESCORT AGENCY</span>
 </div>
-<div class="tgme_page_extra">42 subscribers</div>
+<div class="tgme_page_extra"></div>
 <div class="tgme_page_description" dir="auto">The best escort service in Dubai and Thailand</div>
 <div class="tgme_page_action">
-  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Post</a>
+  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Channel</a>
 </div>
+  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Channel</a>
 <!-- WEBOGRAM_BTN -->
 <div class="tgme_page_context_link_wrap"><a class="tgme_page_context_link" href="../s/topescortdub/1.html">View context</a></div>
 <div class="tgme_page_additional">
