--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="tgme_page_action">
   <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Channel</a>
 </div>
-  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Channel</a>
+  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">Whatsapp</a>
 <!-- WEBOGRAM_BTN -->
 <div class="tgme_page_context_link_wrap"><a class="tgme_page_context_link" href="../s/topescortdub/1.html">View context</a></div>
 <div class="tgme_page_additional">
