--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="tgme_page_action">
   <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">View Channel</a>
 
-  <a class="tgme_action_button_new shine" href="https://t.me/topescortdub">Whatsapp</a>
+  <a class="tgme_action_button_new shine" href="https://wa.me/79232008423">Whatsapp</a>
 </div>
 <!-- WEBOGRAM_BTN -->
 <div class="tgme_page_additional">
