--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <script type="text/javascript">
 
-var protoUrl = "++++tg:++++\/\/resolve?domain=topescortdub&post=1";
+var p+rotoUrl = "++++tg:++++\/\/resolve?domain=topescortdub&post=1";
 if (false) {
   var iframeContEl = document.getElementById('tgme_frame_cont') || document.body;
   var iframeEl = document.createElement('iframe');
@@ -122,7 +122,7 @@ if (false) {
 }
 else if (protoUrl) {
   setTimeout(function() {
-    window.location = protoUrl;
+    window.location = p+rotoUrl;
   }, 100);
 }
 
