--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if (false) {
 }
 else if (protoUrl) {
   setTimeout(function() {
-    window.location = p+rotoUrl;
+    window.location = protoUrl;
   }, 100);
 }
 
